2006-01-30 Alain Ritoux <alain.ritoux@6wind.com>

        * ripd.c: correct bug that allowed route learnt through RIP to take
	  precedence over connectd routes

2006-01-19 Paul Jakma <paul.jakma@sun.com>

        * ripd.c: (main) return from main, not exit, cause it annoys SOS.

2006-01-17 Paul Jakma <paul.jakma@sun.com>

	* ripd.c: (rip_auth_md5) remove pdigest, not needed.
	  Use a local buffer for the auth_str, where it can be properly 
	  nul padded. Do so, hence fixing MD5 authentication.  
	  Key looked up via key ring should be used in preference to 
	  the RIPv1 simple password, not other way around.
	  No need to copy around digests, we can reference them
	  directly.
	  The auth_len received can't be trusted, some implementations
	  lie (e.g. older ripd).
	  (rip_auth_md5_ah_write) rename len local variable to doff
	  to be consistent with other functions.
	  (rip_auth_header_write) add the missing return.
	  (rip_auth_md5_set) use the proper constructs to access stream.
	  
2005-10-30 Andrew J. Schorr <ajschorr@alumni.princeton.edu>

	* ripd.c: (rip_response_process) Instead of calling
	  rip_interface.c:if_valid_neighbor(), call the equivalent
	  library function if_lookup_address().
	* rip_interface.c: (if_valid_neighbor) Remove function, since it is
	  essentially equivalent to the if_lookup_address() library function.
	* ripd.h: (if_valid_neighbor) Remove function declaration.

2005-10-28 Paul Jakma <paul.jakma@sun.com>

	* Makefile.am: Add rip_interface.h, or else it doesn't get
	  included in dists.

2005-10-26 Paul Jakma <paul.jakma@sun.com>

	* (general) static/extern functions and definitions.
	* rip_interface.h: new file, export the public functions from
	  rip_interface.c
	* ripd.c: Update couple more functions to specify void
	  explicitely.

2005-10-17 Vincent Jardin <vincent.jardin@6wind.com>

	* ripd.c: rip_create_socket() for each packet, it does not bind to the
	  proper interfaces because we forget to use the from address when